[gd_scene load_steps=3 format=3 uid="uid://chb2rturd6ehr"]

[ext_resource type="Script" path="res://scripts/equipment/weapon/base_projectile.gd" id="1_ny1hb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y4qws"]

[node name="BaseProjectile" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ny1hb")

[node name="sprite" type="Sprite2D" parent="."]

[node name="hitbox_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y4qws")

[node name="visibility_notifier" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.7, 0.7)

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="screen_exited" from="visibility_notifier" to="." method="_on_screen_exited"]
